fix nested flex overflow error on dashboard weight chart

--- a/client-ts/src/styles/_dashboard.scss
+++ b/client-ts/src/styles/_dashboard.scss
@@ -1,22 +1,26 @@
 .stat-container {
   width: 100%;
-  height: 400px;
+  height: 300px;
   background-color: rgba(0, 0, 0, 0.1);
-  padding: 2em;
+  padding: 1em;
   margin-top: 1em;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
+
+  p {
+    font-size: 10px;
+    // border: 1px red solid;
+  }
 }
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 150px 50%;
-  grid-gap: 1px;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 3px;
   margin-top: 2em;
   width: 100%;
+  height: 400px;
 
   div {
     display: flex;
@@ -24,6 +28,9 @@
     align-items: center;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.1);
+    // min-width: 0;
+    // min-height: 0;
+    // height: 500px;
   }
 }
 
@@ -36,6 +43,7 @@
     flex-direction: column;
 
     div {
+      overflow: hidden;
       // height: auto;
       // width: 100%;
     }
