--- a/client-ts/src/styles/_sidebar.scss
+++ b/client-ts/src/styles/_sidebar.scss
@@ -43,7 +43,7 @@
     height: 100vh;
     background-color: var(--bg-panel);
     // left: 0;
-    min-width: 150px;
+    // min-width: 180px;
     ul {
       flex-direction: row;
       display: flex;
